fix: Set line-height to 0 to prevent cropping of "Saving" text
- Adjusted line-height to 0 to ensure the "Saving" text is fully visible, and not cut off in Chrome.

--- a/browser/css/menubar.css
+++ b/browser/css/menubar.css
@@ -73,7 +73,7 @@
 	font-family: var(--cool-font);
 	position: relative;
 	background: transparent;
-	padding-inline-start: 2px;
+	line-height: 0;
 	height: 24px;
 	align-items: center;
 	justify-content: center;
@@ -85,7 +85,7 @@
 
 nav.hasnotebookbar #save::after {
 	position: absolute;
-	top: 18px;
+	bottom: 0px;
 }
 
 nav.hasnotebookbar #save.saving::after {
